--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ This space exists only for us.
 </div>
 
 <audio id="bgMusic" loop>
-    <source src="Images/Niki.mp3" type="audio/mpeg">
+    <source src="Images/NIKI.mp3" type="audio/mpeg">
 </audio>
 <script>
 const button = document.getElementById("playButton");
@@ -222,4 +222,5 @@ const observer = new IntersectionObserver((entries) => {
 }, { threshold: 0.5 }); // triggers when half of video is visible
 
 observer.observe(video);
+
 </script>
