--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 <p class="slider-subtitle">Some memories don’t fade — they gently move with time</p>
 <div class="slider">
     <div class="slides">
-        <div class="slide" style="background-image: url('Images/1.jpg');"></div>
+        <div class="slide" style="background-image: url('Images/1.JPG');"></div>
         <div class="slide" style="background-image: url('Images/12.jpg');"></div>
-        <div class="slide" style="background-image: url('Images/3.jpg');"></div>
+        <div class="slide" style="background-image: url('Images/3.JPG');"></div>
         <div class="slide" style="background-image: url('Images/14.jpg');"></div>
         <div class="slide" style="background-image: url('Images/11.jpg');"></div>
         <div class="slide" style="background-image: url('Images/18.jpg');"></div>
@@ -149,7 +149,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 
 <section class="memories">
     <div class="memory"><img src="Images/15.jpg" alt=""></div>
-    <div class="memory"><img src="Images/2.jpg" alt=""></div>
+    <div class="memory"><img src="Images/2.JPG" alt=""></div>
     <div class="memory"><img src="Images/13.jpg" alt=""></div>
     <div class="memory"><img src="Images/5.jpg" alt=""></div>
     <div class="memory"><img src="Images/9.jpg" alt=""></div>
@@ -224,3 +224,4 @@ const observer = new IntersectionObserver((entries) => {
 observer.observe(video);
 
 </script>
+
