--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     <div class="slides">
         <div class="slide" style="background-image: url('Images/10.jpg');"></div>
         <div class="slide" style="background-image: url('Images/12.jpg');"></div>
-        <div class="slide" style="background-image: url('Images/3.JPG');"></div>
+        <div class="slide" style="background-image: url('Images/8.jpg');"></div>
         <div class="slide" style="background-image: url('Images/14.jpg');"></div>
         <div class="slide" style="background-image: url('Images/11.jpg');"></div>
         <div class="slide" style="background-image: url('Images/18.jpg');"></div>
@@ -224,5 +224,6 @@ const observer = new IntersectionObserver((entries) => {
 observer.observe(video);
 
 </script>
+
 
 
