--- a/index.html
+++ b/index.html
@@ -57,8 +57,18 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 .slide::before { content: ""; position: absolute; inset: 0; background: rgba(0,0,0,0.25); border-radius: 20px; }
 
 .memories { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 50px; }
-.memory { background: var(--card); padding: 20px; border-radius: 16px; position: relative; overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; transform: translateY(20px); opacity: 0; }
-.memory img, .memory video { width: 100%; height: 100px; object-fit: cover; border-radius: 10px; margin-bottom: 10px; }
+.memory {  background: var(--card); 
+    padding: 20px; 
+    border-radius: 16px; 
+    position: relative; 
+    overflow: hidden; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+    transform: translateY(20px); 
+    opacity: 0;  }
+.memory img, .memory video {  width: 100%;       /* make image fill the memory container */
+    height: auto;      /* keep aspect ratio */
+    display: block; 
+    border-radius: 12px; }
 .memory h3 { margin-bottom: 5px; font-size: 1rem; color: var(--accent);}
 .memory p { font-size: 0.85rem; color: var(--muted); }
 
@@ -94,6 +104,13 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     .memory p { font-size: 0.8rem; }
     .slider { aspect-ratio: 4/3; }
     .slide span { font-size: 0.75rem; padding: 6px 10px; }
+     .memories {
+        grid-template-columns: 1fr; /* single column on small screens */
+    }
+
+    .memory img {
+        max-height: 220px; /* adjust height for mobile if needed */
+    }
 }
 
 .scroll-animate {
@@ -107,27 +124,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     transform: translateY(0);
 }
 
-/* Mobile-friendly image fit (works on all phones) */
-.memory img {
-    width: 100%;
-    height: auto;        /* prevents stretching */
-    max-width: 100%;
-    max-height: 260px;  /* safe height for small screens */
-    object-fit: cover;  /* fills nicely */
-    border-radius: 12px;
-    display: block;
-}
 
-/* Ensure 1 image per row on mobile */
-@media (max-width: 600px) {
-    .memories {
-        grid-template-columns: 1fr;
-    }
-
-    .memory img {
-        max-height: 300px;
-    }
-}
 
 </style>
 </head>
@@ -247,6 +244,7 @@ const observer = new IntersectionObserver((entries) => {
 observer.observe(video);
 
 </script>
+
 
 
 
