--- a/index.html
+++ b/index.html
@@ -56,16 +56,29 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 .slide span { position: relative; z-index: 1; background: rgba(0,0,0,0.35); padding: 10px 15px; border-radius: 15px; font-size: 0.85rem; backdrop-filter: blur(4px); animation: textPulse 4s ease-in-out infinite; }
 .slide::before { content: ""; position: absolute; inset: 0; background: rgba(0,0,0,0.25); border-radius: 20px; }
 
-.memories { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-bottom: 50px; }
-.memory {  background: var(--card); 
-    padding: 20px; 
-    border-radius: 16px; 
-    position: relative; 
-    overflow: hidden; 
-    transition: transform 0.3s ease, box-shadow 0.3s ease; 
-    transform: translateY(20px); 
-    opacity: 0;  }
-.memory img, .memory video {  width: 100%;       /* make image fill the memory container */
+.memories {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); /* flexible grid */
+    gap: 5px; /* space between images like Instagram */
+    margin-bottom: 50px;
+}
+
+.memory {
+    background: var(--card);
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    aspect-ratio: 1 / 1; /* make it square like Instagram */
+}
+
+.memory img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* cover the whole square container */
+    display: block;
+    border-radius: 10px;
+}
+.memory video {  width: 100%;       /* make image fill the memory container */
     height: auto;      /* keep aspect ratio */
     display: block; 
     border-radius: 12px; }
@@ -104,8 +117,9 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     .memory p { font-size: 0.8rem; }
     .slider { aspect-ratio: 4/3; }
     .slide span { font-size: 0.75rem; padding: 6px 10px; }
-     .memories {
-        grid-template-columns: 1fr; /* single column on small screens */
+    .memories {
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        gap: 4px;
     }
 
     .memory img {
