--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 <p class="slider-subtitle">Some memories don’t fade — they gently move with time</p>
 <div class="slider">
     <div class="slides">
-        <div class="slide" style="background-image: url('Images/1.jpg');"></div>
+        <div class="slide" style="background-image: url('Images/8.jpg');"></div>
         <div class="slide" style="background-image: url('Images/12.jpg');"></div>
         <div class="slide" style="background-image: url('Images/3.jpg');"></div>
         <div class="slide" style="background-image: url('Images/14.jpg');"></div>
@@ -168,7 +168,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 
 <section class="memories">
     <div class="memory"><img src="Images/15.jpg" alt=""></div>
-    <div class="memory"><img src="Images/2.jpg" alt=""></div>
+    <div class="memory"><img src="Images/12.jpg" alt=""></div>
     <div class="memory"><img src="Images/13.jpg" alt=""></div>
     <div class="memory"><img src="Images/5.jpg" alt=""></div>
     <div class="memory"><img src="Images/9.jpg" alt=""></div>
@@ -204,7 +204,7 @@ This space exists only for us.
 </div>
 
 <audio id="bgMusic" loop>
-    <source src="Images/Niki.mp3" type="audio/mpeg">
+    <source src="Images/NIKI.mp3" type="audio/mpeg">
 </audio>
 <script>
 const button = document.getElementById("playButton");
@@ -262,4 +262,5 @@ const observer = new IntersectionObserver((entries) => {
 }, { threshold: 0.5 }); // triggers when half of video is visible
 
 observer.observe(video);
+
 </script>
