--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     <div class="slides">
         <div class="slide" style="background-image: url('Images/8.jpg');"></div>
         <div class="slide" style="background-image: url('Images/12.jpg');"></div>
-        <div class="slide" style="background-image: url('Images/3.jpg');"></div>
+        <div class="slide" style="background-image: url('Images/3.JPG');"></div>
         <div class="slide" style="background-image: url('Images/14.jpg');"></div>
         <div class="slide" style="background-image: url('Images/11.jpg');"></div>
         <div class="slide" style="background-image: url('Images/18.jpg');"></div>
