--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     <div class="slides">
         <div class="slide" style="background-image: url('Images/8.jpg');"></div>
         <div class="slide" style="background-image: url('Images/12.jpg');"></div>
-        <div class="slide" style="background-image: url('Images/3.JPG');"></div>
+        <div class="slide" style="background-image: url('Images/13.jpg');"></div>
         <div class="slide" style="background-image: url('Images/14.jpg');"></div>
         <div class="slide" style="background-image: url('Images/11.jpg');"></div>
         <div class="slide" style="background-image: url('Images/18.jpg');"></div>
@@ -168,8 +168,8 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
 
 <section class="memories">
     <div class="memory"><img src="Images/15.jpg" alt=""></div>
-    <div class="memory"><img src="Images/12.jpg" alt=""></div>
-    <div class="memory"><img src="Images/13.jpg" alt=""></div>
+    <div class="memory"><img src="Images/8.jpg" alt=""></div>
+    <div class="memory"><img src="Images/16.jpg" alt=""></div>
     <div class="memory"><img src="Images/5.jpg" alt=""></div>
     <div class="memory"><img src="Images/9.jpg" alt=""></div>
     <div class="memory"><img src="Images/10.jpg" alt=""></div>
