--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@ h1 { font-size: 2rem; margin-bottom: 10px; animation: fadeUp 1.5s ease forwards;
     <div class="memory"><img src="Images/19.jpg" alt=""></div>
     <div class="memory"><img src="Images/20.jpg" alt=""></div>
     <div class="memory"><img src="Images/21.jpg" alt=""></div>
+    <div class="memory"><img src="Images/30.jpg" alt=""></div>
+    <div class="memory"><img src="Images/31.jpg" alt=""></div>
+    <div class="memory"><img src="Images/32.jpg" alt=""></div>
+    <div class="memory"><img src="Images/33.jpg" alt=""></div>
+    <div class="memory"><img src="Images/34.jpg" alt=""></div>
+    <div class="memory"><img src="Images/35.jpg" alt=""></div>
     <!-- Video -->
    
 </section>
@@ -272,4 +278,5 @@ const observer = new IntersectionObserver((entries) => {
 observer.observe(video);
 
 </script>
+
 
